--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="introducao">
+        <div>
+            <h2>Jerry Yang</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
+        </div>
+        <div>
+            <h2>Yahoo!</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, ipsa quo tempora, error vero ea inventore explicabo expedita hic deserunt optio minima distinctio enim sapiente est non animi, dignissimos unde!</p>
+        </div>
+        <div>
+            <h2>David Filo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga maiores assumenda necessitatibus quae ullam ipsa rem voluptas, harum natus cupiditate ut dolorum possimus facere, optio reiciendis praesentium odit mollitia?</p>
+        </div>
+    </div>
 </body>
 </html>
