--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="introducao">
         <div>
             <h2>Jerry Yang</h2>
+            <img src="jerrinho.webp" style="width: 300px;">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
         </div>
         <div>
