pasta de imagens + imagem do david

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="introducao">
         <div>
             <h2>Jerry Yang</h2>
-            <img src="jerrinho.webp" style="width: 300px;">
+            <img src="Imagens/jerrinho.png" style="width: 300px;">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
         </div>
         <div>
@@ -19,6 +19,7 @@
         </div>
         <div>
             <h2>David Filo</h2>
+            <img src="Imagens/Davidinho.png" style="width: 225px;">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga maiores assumenda necessitatibus quae ullam ipsa rem voluptas, harum natus cupiditate ut dolorum possimus facere, optio reiciendis praesentium odit mollitia?</p>
         </div>
     </div>
