adição de botão para Jerry Yang

--- a/index.html
+++ b/index.html
@@ -10,16 +10,21 @@
     <div class="introducao">
         <div>
             <h2>Jerry Yang</h2>
-            <img src="Imagens/jerrinho.png" style="width: 300px;">
+            <img src="Imagens/jerrinho.png" style="width: 300px;" class="center">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
+            <button class="center pesquisar" onclick="window.location.href='Jerry Yang/index.html'">
+                <img src="lupinha.png">
+                Pesquisar
+            </button>
         </div>
         <div>
             <h2>Yahoo!</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, ipsa quo tempora, error vero ea inventore explicabo expedita hic deserunt optio minima distinctio enim sapiente est non animi, dignissimos unde!</p>
+            <img src="Imagens/Yahooinho.png" style="width: 350px;" class="center">
+            <p>O Yahoo é uma empreza de serviços web</p>
         </div>
         <div>
             <h2>David Filo</h2>
-            <img src="Imagens/Davidinho.png" style="width: 225px;">
+            <img src="Imagens/Davidinho.png" style="width: 225px;" class="center">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga maiores assumenda necessitatibus quae ullam ipsa rem voluptas, harum natus cupiditate ut dolorum possimus facere, optio reiciendis praesentium odit mollitia?</p>
         </div>
     </div>
