Botões para ir para cada um das paginas

--- a/index.html
+++ b/index.html
@@ -10,22 +10,30 @@
     <div class="introducao">
         <div>
             <h2>Jerry Yang</h2>
-            <img src="Imagens/jerrinho.png" style="width: 300px;" class="center">
+            <img src="Imagens/jerrinho.png" style="width: 300px;" class="center whiteborder">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
             <button class="center pesquisar" onclick="window.location.href='Jerry Yang/index.html'">
                 <img src="lupinha.png">
-                Pesquisar
+                <P style="display: inline;">Pesquisar</P>
             </button>
         </div>
         <div>
             <h2>Yahoo!</h2>
-            <img src="Imagens/Yahooinho.png" style="width: 350px;" class="center">
-            <p>O Yahoo é uma empreza de serviços web</p>
+            <img src="Imagens/Yahooinho.png" style="width: 350px;" class="center whiteborder">
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis excepturi veniam aliquam eveniet molestias impedit voluptatem quod commodi cumque temporibus, sunt qui dignissimos quibusdam recusandae error cupiditate velit suscipit? Sapiente!</p>
+            <button class="center pesquisar" onclick="window.location.href='Yahoo/index.html'">
+                <img src="lupinha.png">
+                <P style="display: inline;">Pesquisar</P>
+            </button>
         </div>
         <div>
             <h2>David Filo</h2>
-            <img src="Imagens/Davidinho.png" style="width: 225px;" class="center">
+            <img src="Imagens/Davidinho.png" style="width: 225px;" class="center whiteborder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga maiores assumenda necessitatibus quae ullam ipsa rem voluptas, harum natus cupiditate ut dolorum possimus facere, optio reiciendis praesentium odit mollitia?</p>
+            <button class="center pesquisar" onclick="window.location.href='David Filo/index.html'">
+                <img src="lupinha.png">
+                <P style="display: inline;">Pesquisar</P>
+            </button>
         </div>
     </div>
 </body>
