meu deus quanta coisa

--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>David Filo</title>
+    <title>Yahoo</title>
+    <link rel="stylesheet" href="../csspadrao.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="center content">
+        <button class="pesquisar" onclick="window.location.href='../Siteinicial/index.html'">
+            <img src="../Imagens/setinha.png" style="width: 20px;">
+            <P style="display: inline;">Voltar</P>
+        </button>
+        <h1>David Filo</h1>
+    </div>
 </body>
 </html>
