--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry Yang</title>
+    ç<link rel="stylesheet" href="../csspadrao.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="center content">
+        <button class="pesquisar" onclick="window.location.href='../Siteinicial/index.html'">
+            <img src="../Imagens/setinha.png" style="width: 20px;">
+            <P style="display: inline;">Voltar</P>
+        </button>
+        <h1 class="center">Jerry Yang</h1>
+        <img src="../Imagens/jerrinho.png" class="center whiteborder">
+        <p>Nascido em Taiwan em 6 de novembro de 1968, Jerry Yang chegou aos Estados Unidos com apenas 10 anos. Apesar não dominar o inglês, isso não o impediu de se destacar, especialmente nas disciplinas de matemática e ciência. O seu desempenho académico acabaria por levá-lo a estudar em Stanford, onde conhece o seu futuro sócio e co-fundador da Yahoo, David Filo.</p>
+        <p>Descrito por colegas e amigos como alguém de inteligência afiada e de uma humildade notável, Jerry era conhecido por reflectir estas características tanto no seu estilo de liderança como na sua abordagem aos negócios.</p>
+        <p>CEO da empresa entre junho de 2007 e janeiro de 2009, enfrentou durante esse curto período alguns desafios significativos como a tentativa de aquisição pela Microsoft, a qual recusou, que lhe valeram duras críticas por essa decisão.</p>
+        <p>Ele foi uma figura chave na popularização do uso da internet, transformando a Yahoo em um dos portais mais visitados do mundo, introduzindo milhões de usuários ao e-mail, notícias online, serviços financeiros e uma infinidade de outros serviços web.</p>
+    </div>
 </body>
 </html>
