--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yahoo</title>
+    <link rel="stylesheet" href="../csspadrao.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="center content">
+        <button class="pesquisar" onclick="window.location.href='../Siteinicial/index.html'">
+            <img src="../Imagens/setinha.png" style="width: 20px;">
+            <P style="display: inline;">Voltar</P>
+        </button>
+        <h1>Yahoo</h1>
+    </div>
 </body>
 </html>
