--- a/Siteinicial/index.html
+++ b/Siteinicial/index.html
@@ -21,7 +21,7 @@
         <div>
             <h1>Yahoo!</h1>
             <img src="../Imagens/Yahooinho.png" style="width: 350px;" class="center whiteborder">
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officiis excepturi veniam aliquam eveniet molestias impedit voluptatemdawswswasdwawds quod commodi cumque temporibus, sunt qui dignissimos quibusdam recusandae error cupiditate velit suscipit? Sapiente!</p>
+            <p>O Yahoo é um portal Web sediado em Sunnyvale, California. Conhecido também por ser uma das ferramentas de navegação mais conhecidas. Foi fundado em janeiro de 1994 e incorporado em março de 1995.</p>
             <button class="center pesquisar" onclick="window.location.href='../Yahoo/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
@@ -30,7 +30,7 @@
         <div>
             <h1>David Filo</h1>
             <img src="../Imagens/Davidinho.png" style="width: 225px;" class="center whiteborder">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel fuga maiores assumenda necessitatibus quae ullam ipsa rem voluptas, harum natus cupiditate ut dolorum possimus facere, optio reiciendis praesentium odit mollitia?</p>
+            <p>Nasceu em 1966 nos Estados Unidos, </p>
             <button class="center pesquisar" onclick="window.location.href='../David Filo/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
