introdução basica - David Filo e Cary- Jerry Yang

--- a/Siteinicial/index.html
+++ b/Siteinicial/index.html
@@ -12,7 +12,7 @@
         <div>
             <h1>Jerry Yang</h1>
             <img src="../Imagens/jerrinho.png" style="width: 300px;" class="center whiteborder">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium error sunt nihil aperiam officiis quo doloribus eveniet quis accusamus iste fugiat debitis, ducimus facere voluptate ratione dolorum sint illum minus.</p>
+            <p>Nasceu em Taiwan em 6 de Novembro de 1968. Chegou aos Estados Unidos em 1978 com 10 anos de idade e, mesmo não sabendo ingles, conseguiu se destacar em disciplinas como matemática e ciência.</p>
             <button class="center pesquisar" onclick="window.location.href='../Jerry Yang/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
@@ -30,7 +30,7 @@
         <div>
             <h1>David Filo</h1>
             <img src="../Imagens/Davidinho.png" style="width: 225px;" class="center whiteborder">
-            <p>Nasceu em 1966 nos Estados Unidos, </p>
+            <p>Nasceu em 1966 nos Estados Unidos, e com 6 anos, David Filo foi viver na cidade de Moss Bluff, no estado da Luisiana. Frenquentou o Sam Houston e depois a Universidade privada de Tulane. Conheceu Jerry Yang na Universidade de Stanford e ambôs fundaram a empreza Yahoo.</p>
             <button class="center pesquisar" onclick="window.location.href='../David Filo/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
