--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -14,6 +14,23 @@
             <P style="display: inline;">Voltar</P>
         </button>
         <h1>Yahoo</h1>
+        <!--Produtos-->
+        <h1>Produtos</h1>
+        <h2>Comunicação</h2>
+        <h3>AOL Mail</h3>
+        <h3>Calendar</h3>
+        <h3>Groups</h3>
+
+        <h2>Pesquisa</h2>
+        <h3>AOL Search</h3>
+        <h3>OneSearch</h3>
+
+        <h2>Multimédia</h2>
+        <h3>Answers</h3>
+        <h3>Finance/AOL Finance</h3>
+        <h3>Shopping</h3>
+        <h3>Sports</h3>
+        <!--Produtos-->
     </div>
 </body>
 </html>
