Adicao de couteudos dos produtos do yahoo

--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -18,18 +18,27 @@
         <h1>Produtos</h1>
         <h2>Comunicação</h2>
         <h3>Yahoo e AOL Mail</h3>
+        <p>São serviços que oferecem ferramentas para organizar e-mails, pode ser usado em navegadores como chrome e fire fox.</p>
         <h3>Yahoo Calendar</h3>
+        <p>É utilizado para gerenciar sua agenda, colocando datas de reuniões, eventos ou lembretes, sincronizando-a com diversos dispositivos e aplicativos, dando liberdade de criar várias agendas para separar compromissos pessoais dos profissionais.</p>
         <h3>Yahoo Groups</h3>
+        <p>Uma plataforma online, onde os usuários podiam criar e participar de grupos de discussão e listas de e-mail.</p>
 
         <h2>Pesquisa</h2>
         <h3>Yahoo e AOL Search</h3>
+        <p>São mecanismos de busca na internet que permitem aos utilizadores encontrar informações online.</p>
         <h3>OneSearch</h3>
+        <p>Uma ferramenta de pesquisa em bibliotecas que permite procurar por diferentes tipos de materiais, como livros, artigos, e-books e outros recursos, em um só lugar.</p>
 
         <h2>Multimédia</h2>
         <h3>Yahoo Answers</h3>
+        <p>Era uma plataforma online de perguntas e respostas, onde os utilizadores podiam fazer perguntas sobre diversos temas e obter respostas de outros utilizadores. Foi desativado em 4 de maio de 2021 por conta da queda de popularidade.</p>
         <h3>Yahoo Finance/AOL Finance</h3>
+        <p>Servem para fornecer informações e notícias financeiras, incluindo cotações de ações, dados de mercado, notícias sobre empresas, relatórios financeiros e análises.</p>
         <h3>Yahoo Shopping</h3>
+        <p>É um serviço online que te ajuda a encontrar produtos de diferentes lojas online. Além de encontrar produtos, o Yahoo Shopping também oferece promoções, cupons e conteúdo informativo para te inspirar nas suas compras. </p>
         <h3>Yahoo Sports</h3>
+        <p>É um serviço online que fornece notícias, resultados, estatísticas e conteúdo de diversos esportes.</p>
         <!--Produtos-->
     </div>
 </body>
