--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -14,6 +14,8 @@
             <P style="display: inline;">Voltar</P>
         </button>
         <h1>David Filo</h1>
+        <img src="../Imagens/Davidinho.png" class="center whiteborder" style="width: 244px;">
+        <p></p>
     </div>
 </body>
 </html>
