começo de animação + botões no final das div

--- a/Siteinicial/index.html
+++ b/Siteinicial/index.html
@@ -13,7 +13,7 @@
             <h1>Jerry Yang</h1>
             <img src="../Imagens/jerrinho.png" style="width: 300px;" class="center whiteborder">
             <p>Nasceu em Taiwan em 6 de Novembro de 1968. Chegou aos Estados Unidos em 1978 com 10 anos de idade e, mesmo não sabendo ingles, conseguiu se destacar em disciplinas como matemática e ciência.</p>
-            <button class="center pesquisar" onclick="window.location.href='../Jerry Yang/index.html'">
+            <button class="pesquisar" onclick="window.location.href='../Jerry Yang/index.html'" style="top:84px">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
             </button>
@@ -22,7 +22,7 @@
             <h1>Yahoo!</h1>
             <img src="../Imagens/Yahooinho.png" style="width: 350px;" class="center whiteborder">
             <p>O Yahoo é um portal Web sediado em Sunnyvale, California. Conhecido também por ser uma das ferramentas de navegação mais conhecidas. Foi fundado em janeiro de 1994 e incorporado em março de 1995.</p>
-            <button class="center pesquisar" onclick="window.location.href='../Yahoo/index.html'">
+            <button class="pesquisar" onclick="window.location.href='../Yahoo/index.html'" style="top:188px">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
             </button>
@@ -31,7 +31,7 @@
             <h1>David Filo</h1>
             <img src="../Imagens/Davidinho.png" style="width: 225px;" class="center whiteborder">
             <p>Nasceu em 1966 nos Estados Unidos, e com 6 anos, David Filo foi viver na cidade de Moss Bluff, no estado da Luisiana. Frenquentou o Sam Houston e depois a Universidade privada de Tulane. Conheceu Jerry Yang na Universidade de Stanford e ambôs fundaram a empreza Yahoo.</p>
-            <button class="center pesquisar" onclick="window.location.href='../David Filo/index.html'">
+            <button class="pesquisar" onclick="window.location.href='../David Filo/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
             </button>
