--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -14,8 +14,9 @@
             <P style="display: inline;">Voltar</P>
         </button>
         <h1>David Filo</h1>
-        <img src="../Imagens/Davidinho.png" class="center whiteborder" style="width: 244px;">
-        <p></p>
+        <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
+        <p style="display: inline;" class="basicdetails">firefirefire</p>
+        <p>This dude is cool ig i dunno</p>
     </div>
 </body>
 </html>
