Adição de couteudo

--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -13,7 +13,22 @@
             <img src="../Imagens/setinha.png" style="width: 20px;">
             <P style="display: inline;">Voltar</P>
         </button>
+        <!--História do Yahoo-->
         <h1>Yahoo</h1>
+        <h2>Hístoria do Yahoo</h2>
+        <p>Yahoo foi criado em 1994, por Jerry Yang e David Filo, na época eram estudantes de pós-graduação d Universidade de Stanford. O serviço era chamado de Jerry and David's Guide to the Worls Wide Web, que era basicamente um diretório de links.</p>
+        <p>Pouco tempo depois, o nome Yahoo foi adotado (Yet Another Hierarchical Officious Oracle). A empresa decolou com seus serviços como Yahoo Messenger e Yahoo Mail e tornaram a marca em um símbolo da prória web. Com a aquisição de serviços como GeoCities e a criação de portais regionais, o Yahoo se transformou em um fenômeno global.</p>
+        <p>No início dos anos 2000, semanas antes da bolha da internet estourar, o Yahoo estava tão bem que viu suas ações atingirem o valor hístorico de cerca de 125 bilhões de dólares. O ponto máximo foi esse, o Yahoo não conseguiu subir mais nenhum degrau. Nos próximos anos, a companhia não conseguiu fazer avanço contra os rivais como Google e Facebook.</p>
+        <h2>Decisões Erradas</h2>
+        <p>O Yahoo tinha uma péssima gestão, onde acontecia diversas decisões erradas. Onde no seu ínicio, em 1998, se negaram a pagar 1 milhão de dólares para comprar a Google. Em 2002, o Yahoo tentou comprar a concorrente Google, que estava em ascensão, por 3 milhões de dólares, mas a Google pedia 5 milhões.</p>
+        <p>Em 2006, a rede social Facebook, já dava sinais que se tornaria um fenômeno. O Yahoo viu uma oportunidade e fez uma oferta de 1 milhão de dólares, mas o seu dono, Mark Zuckerberg se negou a vender.</p>
+        <p>Em 2008, a Microsoft ofereceu uma oferta de 44,6 bilhões de dólares para Jerry Yang, mas ele queria 53 bilhões, Steve Ballmer, Ceo da Microsoft da época aumentou a oferta para 47,5 bilhões, mas Jerry Yang insistiu no outro valor, e então, a Microsoft desistiu.</p>
+        <p>Com a pressão dos investidores, Jerry Yang que havia se tornado Ceo em 2007, deixou o cargo em 2009 (se manteve no conselho do Yahoo até 2011). Começou uma grande troca de Ceo. Assim que Jerry Yang saiu do cargo, Carol Bartz entrou, que havia feito um bom trabalho na Autodesk, mas não deu certo e saiu em 2011. Em seu lugar assumiu o Tim Morse como interino, até a chegada de Scott Thompson, com sua experiência no PayPal. Que durou cerca de cinco meses por um mal relacionamento com acionistas, que descobriram que ele mentiu em seu currículo.Ross Levinsohn, que até então ocupava a função de diretor da divisão de mídia global da companhia, virou CEO do Yahoo. Mas interinamente. Estava difícil encontrar alguém que pudesse tirar a companhia daquela espiral de problemas. Até que um nome promissor surgiu no horizonte.</p>
+        <h2>Sua Esperança</h2>
+        <p>O nome de Marissa Mayer foi levantado para o posto. Mestre em ciências da computação pela Universidade Stanford e especialista em inteligência artificial, foi uma das primeiras funcionárias do Google, tendo realizado trabalhos valiosos para a companhia. Tendo participação em grandes patentes, como Gmail, Maps e a própria ferramenta de busca.
+        </p>
+        <p>Foi nomeada em julho de 2012, deixando muita gente surpressa, porque ela parecia que nunca sairia da Google. Sua gestão começou bem, suas mudanças fizeram o tráfego aumentar 20% em 2013. Seus funcionários receberam mimos como comida grátis e smartphones, e eram motivados a sair da zona de conforto. Como resultado, o Yahoo Mail foi renovado, e Mayer recebeu permissão para aquisições, que foram mais de 30, sendo a principal delas, em 2013, o Tumblr, que custou cerca de 1,1 bilhões de dólares.</p>
+
         <!--Produtos-->
         <h1>Produtos</h1>
         <h2>Comunicação</h2>
@@ -23,6 +38,8 @@
         <p>É utilizado para gerenciar sua agenda, colocando datas de reuniões, eventos ou lembretes, sincronizando-a com diversos dispositivos e aplicativos, dando liberdade de criar várias agendas para separar compromissos pessoais dos profissionais.</p>
         <h3>Yahoo Groups</h3>
         <p>Uma plataforma online, onde os usuários podiam criar e participar de grupos de discussão e listas de e-mail.</p>
+        <h3>Yahoo Messenger</h3>
+        <p>Era um programa de mensagens instantâneas que permitia aos utilizadores conversar e trocar mensagens de texto com outros utilizadores. Permitia também a realização de chats de voz e vídeo, bem como a partilha de ficheiros e multimédia, como imagens e vídeos.</p>
 
         <h2>Pesquisa</h2>
         <h3>Yahoo e AOL Search</h3>
