--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -28,6 +28,10 @@
         <p>O nome de Marissa Mayer foi levantado para o posto. Mestre em ciências da computação pela Universidade Stanford e especialista em inteligência artificial, foi uma das primeiras funcionárias do Google, tendo realizado trabalhos valiosos para a companhia. Tendo participação em grandes patentes, como Gmail, Maps e a própria ferramenta de busca.
         </p>
         <p>Foi nomeada em julho de 2012, deixando muita gente surpressa, porque ela parecia que nunca sairia da Google. Sua gestão começou bem, suas mudanças fizeram o tráfego aumentar 20% em 2013. Seus funcionários receberam mimos como comida grátis e smartphones, e eram motivados a sair da zona de conforto. Como resultado, o Yahoo Mail foi renovado, e Mayer recebeu permissão para aquisições, que foram mais de 30, sendo a principal delas, em 2013, o Tumblr, que custou cerca de 1,1 bilhões de dólares.</p>
+        <h2>Queda</h2>
+        <p>No início de 2014, relatórios financeiros mostravam que, apesar de boa aparência, o Yahoo tinha queda de receita em 2013 e que o cenário não era nada favorável para 2014. No final de 2014, Yahoo anunciou um plano de restruturação que causaria demissões em masssa.</p>
+        <p>Demissões continuaram rolando e serviços pouco ou nada rentáveis foram encerrados nos meses seguintes. Mas não era suficiente. Se por um lado o Yahoo cortava despesas com essas medidas, por outro, Mayer continuava gastando muito dinheiro em aquisições duvidosas.</p>
+        <p>Eric Jackson, um dos investidores mais críticos à gestão de Mayer, chegou a declarar que a companhia gastou mais de 3 bilhões em negócios nos últimos anos que não agregaram valor ao Yahoo.</p>
 
         <!--Produtos-->
         <h1>Produtos</h1>
