--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -32,6 +32,11 @@
         <p>No início de 2014, relatórios financeiros mostravam que, apesar de boa aparência, o Yahoo tinha queda de receita em 2013 e que o cenário não era nada favorável para 2014. No final de 2014, Yahoo anunciou um plano de restruturação que causaria demissões em masssa.</p>
         <p>Demissões continuaram rolando e serviços pouco ou nada rentáveis foram encerrados nos meses seguintes. Mas não era suficiente. Se por um lado o Yahoo cortava despesas com essas medidas, por outro, Mayer continuava gastando muito dinheiro em aquisições duvidosas.</p>
         <p>Eric Jackson, um dos investidores mais críticos à gestão de Mayer, chegou a declarar que a companhia gastou mais de 3 bilhões em negócios nos últimos anos que não agregaram valor ao Yahoo.</p>
+        <h2>Venda</h2>
+        <p>No final de 2015, surgiram sinais que o Yahoo, incapaz de sustentar a situação, colocaria seus serviços à venda, mas os sinais apontavam que o próprio Yahoo seria vendido.</p>
+        <p>Em julho de 2016, a operadora norte-americana Verizon confirmou a compra do Yahoo por 4,83 bilhões de dólares. Que foi parcial, deixando somente 15% dos serviços de fora, que passaram a se chamar Altaba.</p>
+        <p>Por conta de mudanças da empresa, a Ceo Marissa Mayer deixou o posto.</p>
+        <p>A Yahoo! perdeu cerca de 95% do seu valor de mercado em 16 anos. Por fim, a Yahoo! ainda fatura perto dos bilhões por trimestre. Mas, não é um bom resultado, quando se fala de tecnologia. Ela poderia ter comprado o Google e Facebook, que hoje produzem óculos de realidade virtual e carros que dirigem sem motorista. Mas, hoje, ainda é um grande site.</p>
 
         <!--Produtos-->
         <h1>Produtos</h1>
