IBNT + Mudança dos nomes para maiusculo

--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -10,11 +10,21 @@
 <body>
     <div class="center content">
         <button class="pesquisar" onclick="window.location.href='../Siteinicial/index.html'">
-            <img src="../Imagens/setinha.png" style="width: 20px;">
+            <img src="../Imagens/Setinha.png" style="width: 20px;">
             <P style="display: inline;">Voltar</P>
         </button>
         <h1 class="center">Jerry Yang</h1>
-        <img src="../Imagens/jerrinho.png" class="center whiteborder">
+        <div class="ibnt">
+            <div>
+                <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 244px;">
+            </div>
+            <div style="width: 244px;">
+                <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Taiwan">Taiwan</a></p>
+                <p class="moveright ibnt">Idade atual: 56</p>
+                <p class="moveright ibnt">Ano de nascimento: 06/09/1968</p>
+                <p class="moveright ibnt">Fortuna atual: $1.2 Bilhões</p>
+            </div>
+        </div>
         <p>Nascido em Taiwan em 6 de novembro de 1968, Jerry Yang chegou aos Estados Unidos com apenas 10 anos. Apesar não dominar o inglês, isso não o impediu de se destacar, especialmente nas disciplinas de matemática e ciência. O seu desempenho académico acabaria por levá-lo a estudar em Stanford, onde conhece o seu futuro sócio e co-fundador da Yahoo, David Filo.</p>
         <p>Descrito por colegas e amigos como alguém de inteligência afiada e de uma humildade notável, Jerry era conhecido por reflectir estas características tanto no seu estilo de liderança como na sua abordagem aos negócios.</p>
         <p>CEO da empresa entre junho de 2007 e janeiro de 2009, enfrentou durante esse curto período alguns desafios significativos como a tentativa de aquisição pela Microsoft, a qual recusou, que lhe valeram duras críticas por essa decisão.</p>
