--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -14,9 +14,18 @@
             <P style="display: inline;">Voltar</P>
         </button>
         <h1>David Filo</h1>
-        <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
-        <p style="display: inline;" class="basicdetails">firefirefire</p>
-        <p>This dude is cool ig i dunno</p>
+        <div class="ibnt">
+            <div>
+                <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
+            </div>
+            <div style="width: 244px;">
+                <p class="moveright ibnt">Nacionalidade: EUA</p>
+                <p class="moveright ibnt">Idade atual: 59</p>
+                <p class="moveright ibnt">Ano de nascimento: 20/04/1966</p>
+                <p class="moveright ibnt">Fortuna atual: $2.2 Bilhões</p>
+            </div>
+        </div>
+        <p>Oie</p>
     </div>
 </body>
 </html>
