Pequena responsividade para o site

--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -65,7 +65,7 @@
         <p>É um serviço online que te ajuda a encontrar produtos de diferentes lojas online. Além de encontrar produtos, o Yahoo Shopping também oferece promoções, cupons e conteúdo informativo para te inspirar nas suas compras. </p>
         <h3>Yahoo Sports</h3>
         <p>É um serviço online que fornece notícias, resultados, estatísticas e conteúdo de diversos esportes.</p>
-        <!--Produtos-->
+        <!--/Produtos-->
     </div>
 </body>
 </html>
