--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -19,7 +19,7 @@
                 <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
             </div>
             <div style="width: 244px;">
-                <p class="moveright ibnt">Nacionalidade: EUA</p>
+                <p class="moveright ibnt">Nacionalidade: <br><a href="https://pt.wikipedia.org/wiki/Estados_Unidos">EUA</a>🇺🇸</p>
                 <p class="moveright ibnt">Idade atual: 59</p>
                 <p class="moveright ibnt">Ano de nascimento: 20/04/1966</p>
                 <p class="moveright ibnt">Fortuna atual: $2.2 Bilhões</p>
