--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jerry Yang</title>
     <link rel="stylesheet" href="../csspadrao.css">
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="center content">
@@ -19,7 +18,7 @@
                 <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 244px;">
             </div>
             <div style="width: 244px;">
-                <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Taiwan">Taiwan</a></p>
+                <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Taiwan">Taiwan</a> 🇹🇼</p>
                 <p class="moveright ibnt">Idade atual: 56</p>
                 <p class="moveright ibnt">Ano de nascimento: 06/09/1968</p>
                 <p class="moveright ibnt">Fortuna atual: $1.2 Bilhões</p>
