--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -32,10 +32,10 @@
         <h2>Queda</h2>
         <p>No início de 2014, relatórios financeiros mostravam que, apesar de boa aparência, o Yahoo tinha queda de receita em 2013 e que o cenário não era nada favorável para 2014. No final de 2014, Yahoo anunciou um plano de restruturação que causaria demissões em masssa.</p>
         <p>Demissões continuaram rolando e serviços pouco ou nada rentáveis foram encerrados nos meses seguintes. Mas não era suficiente. Se por um lado o Yahoo cortava despesas com essas medidas, por outro, Mayer continuava gastando muito dinheiro em aquisições duvidosas.</p>
-        <p>Eric Jackson, um dos investidores mais críticos à gestão de Mayer, chegou a declarar que a companhia gastou mais de 3 bilhões em negócios nos últimos anos que não agregaram valor ao Yahoo.</p>
+        <p><a href="https://en.wikipedia.org/wiki/Eric_M._Jackson">Eric Jackson</a>, um dos investidores mais críticos à gestão de Mayer, chegou a declarar que a companhia gastou mais de 3 bilhões em negócios nos últimos anos que não agregaram valor ao Yahoo.</p>
         <h2>Venda</h2>
         <p>No final de 2015, surgiram sinais que o Yahoo, incapaz de sustentar a situação, colocaria seus serviços à venda, mas os sinais apontavam que o próprio Yahoo seria vendido.</p>
-        <p>Em julho de 2016, a operadora norte-americana Verizon confirmou a compra do Yahoo por 4,83 bilhões de dólares. Que foi parcial, deixando somente 15% dos serviços de fora, que passaram a se chamar Altaba.</p>
+        <p>Em julho de 2016, a operadora norte-americana <a href="https://www.verizon.com/">Verizon</a> confirmou a compra do Yahoo por 4,83 bilhões de dólares. Que foi parcial, deixando somente 15% dos serviços de fora, que passaram a se chamar <a href="https://pt.wikipedia.org/wiki/Altaba">Altaba</a>.</p>
         <p>Por conta de mudanças da empresa, a Ceo Marissa Mayer deixou o posto.</p>
         <p>A Yahoo! perdeu cerca de 95% do seu valor de mercado em 16 anos. Por fim, a Yahoo! ainda fatura perto dos bilhões por trimestre. Mas, não é um bom resultado, quando se fala de tecnologia. Ela poderia ter comprado o Google e Facebook, que hoje produzem óculos de realidade virtual e carros que dirigem sem motorista. Mas, hoje, ainda é um grande site.</p>
 
@@ -43,28 +43,38 @@
         <h1>Produtos</h1>
         <h2>Comunicação</h2>
         <h3>Yahoo e AOL Mail</h3>
+        <img src="imagens/yahoomail.webp"><img src="imagens/aolmail.png">
         <p>São serviços que oferecem ferramentas para organizar e-mails, pode ser usado em navegadores como chrome e fire fox.</p>
         <h3>Yahoo Calendar</h3>
+        <img src="imagens/yahoocalendar.webp">
         <p>É utilizado para gerenciar sua agenda, colocando datas de reuniões, eventos ou lembretes, sincronizando-a com diversos dispositivos e aplicativos, dando liberdade de criar várias agendas para separar compromissos pessoais dos profissionais.</p>
         <h3>Yahoo Groups</h3>
+        <img src="imagens/groups.jpg">
         <p>Uma plataforma online, onde os usuários podiam criar e participar de grupos de discussão e listas de e-mail.</p>
         <h3>Yahoo Messenger</h3>
+        <img src="imagens/mensagens.webp">
         <p>Era um programa de mensagens instantâneas que permitia aos utilizadores conversar e trocar mensagens de texto com outros utilizadores. Permitia também a realização de chats de voz e vídeo, bem como a partilha de ficheiros e multimédia, como imagens e vídeos.</p>
 
         <h2>Pesquisa</h2>
         <h3>Yahoo e AOL Search</h3>
+        <img src="imagens/ysearch.png"><img src="imagens/asearch.jpg">
         <p>São mecanismos de busca na internet que permitem aos utilizadores encontrar informações online.</p>
         <h3>OneSearch</h3>
+        <img src="imagens/osearch.png">
         <p>Uma ferramenta de pesquisa em bibliotecas que permite procurar por diferentes tipos de materiais, como livros, artigos, e-books e outros recursos, em um só lugar.</p>
 
         <h2>Multimédia</h2>
         <h3>Yahoo Answers</h3>
+        <img src="imagens/Yahoo-Answers.jpg">
         <p>Era uma plataforma online de perguntas e respostas, onde os utilizadores podiam fazer perguntas sobre diversos temas e obter respostas de outros utilizadores. Foi desativado em 4 de maio de 2021 por conta da queda de popularidade.</p>
         <h3>Yahoo Finance/AOL Finance</h3>
+        <img src="imagens/yfinance.jpg"><img src="imagens/aolfinance.png">
         <p>Servem para fornecer informações e notícias financeiras, incluindo cotações de ações, dados de mercado, notícias sobre empresas, relatórios financeiros e análises.</p>
         <h3>Yahoo Shopping</h3>
+        <img src="imagens/shopp.png">
         <p>É um serviço online que te ajuda a encontrar produtos de diferentes lojas online. Além de encontrar produtos, o Yahoo Shopping também oferece promoções, cupons e conteúdo informativo para te inspirar nas suas compras. </p>
         <h3>Yahoo Sports</h3>
+        <img src="imagens/sports.png">
         <p>É um serviço online que fornece notícias, resultados, estatísticas e conteúdo de diversos esportes.</p>
         <!--/Produtos-->
     </div>
