Continuação da responsividade

--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -18,8 +18,8 @@
             <div>
                 <img src="../Imagens/Davidinho.png" class="whiteborder moveleft" style="width: 244px;">
             </div>
-            <div style="width: 244px;">
-                <p class="moveright ibnt">Nacionalidade: <br><a href="https://pt.wikipedia.org/wiki/Estados_Unidos">EUA</a>🇺🇸</p>
+            <div style="width: 244px; align-content: space-around;">
+                <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Estados_Unidos">EUA</a>🇺🇸</p>
                 <p class="moveright ibnt">Idade atual: 59</p>
                 <p class="moveright ibnt">Ano de nascimento: 20/04/1966</p>
                 <p class="moveright ibnt">Fortuna atual: $2.2 Bilhões</p>
