--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -15,9 +15,9 @@
         <h1 class="center">Jerry Yang</h1>
         <div class="ibnt">
             <div>
-                <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 244px;">
+                <img src="../Imagens/Jerrinho.png" class="whiteborder moveleft" style="width: 300px;">
             </div>
-            <div style="width: 244px;">
+            <div style="width: 300px; align-content: space-around;">
                 <p class="moveright ibnt">Nacionalidade: <a href="https://pt.wikipedia.org/wiki/Taiwan">Taiwan</a> 🇹🇼</p>
                 <p class="moveright ibnt">Idade atual: 56</p>
                 <p class="moveright ibnt">Ano de nascimento: 06/09/1968</p>
