--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -15,7 +15,17 @@
         </button>
         <!--História do Yahoo-->
         <h1>Yahoo</h1>
-        <img src="../Imagens/Yahooinho.png">
+        <div class="ibnt">
+            <div>
+                <img src="../Imagens/Yahooinho.png" class="whiteborder moveleft" style="width: 400px;">
+            </div>
+            <div style="width: 400px; align-content: space-around;">
+                <p class="moveright ibnt">Fundação: Janeiro de 1994</p>
+                <p class="moveright ibnt">Dono(s) atual(is): Apollo Global Management</p>
+                <p class="moveright ibnt">Fundadores: Jerry Yang <br> David Filo</p>
+                <p class="moveright ibnt">Sede: California, <a href="https://pt.wikipedia.org/wiki/Estados_Unidos">EUA</a>🇺🇸</p>
+            </div>
+        </div>
         <h2>Hístoria do Yahoo</h2>
         <p>Yahoo foi criado em 1994, por <a href="../Jerry Yang/">Jerry Yang</a> e <a href="../David Filo/index.html">David Filo</a>, na época eram estudantes de pós-graduação da <a href="https://www.stanford.edu/">Universidade de Stanford</a>. O serviço era chamado de Jerry and David's Guide to the Worls Wide Web, que era basicamente um diretório de links.</p>
         <p>Pouco tempo depois, o nome Yahoo foi adotado (Yet Another Hierarchical Officious Oracle). A empresa decolou com seus serviços como Yahoo Messenger e Yahoo Mail e tornaram a marca em um símbolo da prória web. Com a aquisição de serviços como GeoCities e a criação de portais regionais, o Yahoo se transformou em um fenômeno global.</p>
