--- a/Siteinicial/index.html
+++ b/Siteinicial/index.html
@@ -12,7 +12,7 @@
         <div>
             <h1>Jerry Yang</h1>
             <img src="../Imagens/jerrinho.png" style="width: 300px;" class="center whiteborder">
-            <p>Nasceu em Taiwan em 6 de Novembro de 1968. Chegou aos Estados Unidos em 1978 com 10 anos de idade e, mesmo não sabendo ingles, conseguiu se destacar em disciplinas como matemática e ciência.</p>
+            <p>Nasceu em Taiwan em 6 de Novembro de 1968. Chegou aos Estados Unidos em 1978 com 10 anos de idade e, mesmo não sabendo inglês, conseguiu se destacar em disciplinas como matemática e ciência.</p>
             <button class="pesquisar" onclick="window.location.href='../Jerry Yang/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
