--- a/Jerry Yang/index.html
+++ b/Jerry Yang/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jerry Yang</title>
+    <title>1DS Jerry Yang</title>
     <link rel="stylesheet" href="../csspadrao.css">
+    <link rel="shortcut icon" href="../icones/jerrinho.ico" type="image/x-icon">
 </head>
 <body>
     <div class="center content">
