--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yahoo</title>
+    <title>1DS Yahoo</title>
     <link rel="stylesheet" href="../csspadrao.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="../icones/Yahooinho.ico" type="image/x-icon">
 </head>
 <body>
     <div class="center content">
