--- a/David Filo/index.html
+++ b/David Filo/index.html
@@ -26,7 +26,7 @@
                 <p class="moveright ibnt">Fortuna atual: $2.2 Bilhões</p>
             </div>
         </div>
-        <p>Empresário norte-americano, David Filo nasceu a 20 de abril de 1966 nos Estados Unidos da América. Com apenas 6 anos, Filo foi viver para a cidade de Moss Bluff, no estado da Luisiana.</p>
+        <p>Empresário norte-americano, David Filo nasceu em 20 de abril de 1966 nos Estados Unidos da América. Com apenas 6 anos, Filo foi viver para a cidade de Moss Bluff, no estado da Luisiana.</p>
         <p>Frequentou o liceu de Sam Houston e mais tarde a Universidade privada de Tulane, em Nova Orleães, onde obteve o bacharelato em Engenharia informática. Mais tarde, ingressou no curso de Engenharia eletrónica da Universidade de Stanford, onde conheceu Jerry Yang, com quem, em janeiro de 1994, criou o "Jerry's Guide to the World Wide Web" (Guia do Jerry para a World Wide Web), um pequeno site de Internet que consistia, inicialmente, numa listagem de outros sites e que rapidamente se tornou muito popular. Em abril do mesmo ano, o nome do site foi alterado para Yahoo!, e um ano mais tarde, já em 1995, Jerry Yang e David Filo fundavam a empresa Yahoo!.</p>
         <p>Atualmente, David Filo é um dos principais coordenadores por detrás de todas as operações técnicas da empresa, e é um dos grandes responsáveis pela evolução do Yahoo! até ao ponto em que se tornou o site com maior tráfego em todo o mundo.</p>
     </div>
