--- a/Siteinicial/index.html
+++ b/Siteinicial/index.html
@@ -31,7 +31,7 @@
         <div>
             <h1>David Filo</h1>
             <img src="../Imagens/Davidinho.png" style="width: 225px;" class="center whiteborder">
-            <p>Nasceu em 1966 nos Estados Unidos, e com 6 anos, David Filo foi viver na cidade de Moss Bluff, no estado da Luisiana. Frenquentou o Sam Houston e depois a Universidade privada de Tulane. Conheceu Jerry Yang na Universidade de Stanford e ambôs fundaram a empreza Yahoo.</p>
+            <p>Nasceu em 1966 nos Estados Unidos, e com 6 anos, David Filo foi viver na cidade de Moss Bluff, no estado da Luisiana. Frenquentou o Sam Houston e depois a Universidade privada de Tulane. Conheceu Jerry Yang na Universidade de Stanford e ambôs fundaram a empresa Yahoo.</p>
             <button class="pesquisar" onclick="window.location.href='../David Filo/index.html'">
                 <img src="lupinha.png">
                 <P style="display: inline;">Pesquisar</P>
