--- a/Yahoo/index.html
+++ b/Yahoo/index.html
@@ -49,43 +49,44 @@
         <p>Em julho de 2016, a operadora norte-americana <a href="https://www.verizon.com/">Verizon</a> confirmou a compra do Yahoo por 4,83 bilhões de dólares. Que foi parcial, deixando somente 15% dos serviços de fora, que passaram a se chamar <a href="https://pt.wikipedia.org/wiki/Altaba">Altaba</a>.</p>
         <p>Por conta de mudanças da empresa, a Ceo Marissa Mayer deixou o posto.</p>
         <p>A Yahoo! perdeu cerca de 95% do seu valor de mercado em 16 anos. Por fim, a Yahoo! ainda fatura perto dos bilhões por trimestre. Mas, não é um bom resultado, quando se fala de tecnologia. Ela poderia ter comprado o Google e Facebook, que hoje produzem óculos de realidade virtual e carros que dirigem sem motorista. Mas, hoje, ainda é um grande site.</p>
+        <!--História do Yahoo-->
 
         <!--Produtos-->
         <h1>Produtos</h1>
         <h2>Comunicação</h2>
         <h3>Yahoo e AOL Mail</h3>
-        <img src="imagens/yahoomail.webp"><img src="imagens/aolmail.png">
+        <img src="imagens/yahoomail.webp" class="center">
         <p>São serviços que oferecem ferramentas para organizar e-mails, pode ser usado em navegadores como chrome e fire fox.</p>
         <h3>Yahoo Calendar</h3>
-        <img src="imagens/yahoocalendar.webp">
+        <img src="imagens/yahoocalendar.webp" class="center">
         <p>É utilizado para gerenciar sua agenda, colocando datas de reuniões, eventos ou lembretes, sincronizando-a com diversos dispositivos e aplicativos, dando liberdade de criar várias agendas para separar compromissos pessoais dos profissionais.</p>
         <h3>Yahoo Groups</h3>
-        <img src="imagens/groups.jpg">
+        <img src="imagens/groups.jpg" class="center">
         <p>Uma plataforma online, onde os usuários podiam criar e participar de grupos de discussão e listas de e-mail.</p>
         <h3>Yahoo Messenger</h3>
-        <img src="imagens/mensagens.webp">
+        <img src="imagens/mensagens.webp" class="center">
         <p>Era um programa de mensagens instantâneas que permitia aos utilizadores conversar e trocar mensagens de texto com outros utilizadores. Permitia também a realização de chats de voz e vídeo, bem como a partilha de ficheiros e multimédia, como imagens e vídeos.</p>
 
         <h2>Pesquisa</h2>
         <h3>Yahoo e AOL Search</h3>
-        <img src="imagens/ysearch.png"><img src="imagens/asearch.jpg">
+        <img src="imagens/ysearch.png" class="center">
         <p>São mecanismos de busca na internet que permitem aos utilizadores encontrar informações online.</p>
         <h3>OneSearch</h3>
-        <img src="imagens/osearch.png">
+        <img src="imagens/osearch.png" class="center">
         <p>Uma ferramenta de pesquisa em bibliotecas que permite procurar por diferentes tipos de materiais, como livros, artigos, e-books e outros recursos, em um só lugar.</p>
 
         <h2>Multimédia</h2>
         <h3>Yahoo Answers</h3>
-        <img src="imagens/Yahoo-Answers.jpg">
+        <img src="imagens/Yahoo-Answers.jpg" class="center">
         <p>Era uma plataforma online de perguntas e respostas, onde os utilizadores podiam fazer perguntas sobre diversos temas e obter respostas de outros utilizadores. Foi desativado em 4 de maio de 2021 por conta da queda de popularidade.</p>
         <h3>Yahoo Finance/AOL Finance</h3>
-        <img src="imagens/yfinance.jpg"><img src="imagens/aolfinance.png">
+        <img src="imagens/yfinance.jpg" class="center">
         <p>Servem para fornecer informações e notícias financeiras, incluindo cotações de ações, dados de mercado, notícias sobre empresas, relatórios financeiros e análises.</p>
         <h3>Yahoo Shopping</h3>
-        <img src="imagens/shopp.png">
+        <img src="imagens/shopp.png" class="center">
         <p>É um serviço online que te ajuda a encontrar produtos de diferentes lojas online. Além de encontrar produtos, o Yahoo Shopping também oferece promoções, cupons e conteúdo informativo para te inspirar nas suas compras. </p>
         <h3>Yahoo Sports</h3>
-        <img src="imagens/sports.png">
+        <img src="imagens/sports.png" class="center">
         <p>É um serviço online que fornece notícias, resultados, estatísticas e conteúdo de diversos esportes.</p>
         <!--/Produtos-->
     </div>
